align save and publish api and ensure saveing data before publish

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,13 +75,15 @@ button {
   cursor: pointer;
 
 }
+/* scrollbehavior */
+html {
+  scroll-behavior: smooth;
+}
 
 .scrollbar-hide {
   scrollbar-width: none; /* Firefox */
 }
-.scrollbar-hide::-webkit-scrollbar {
-  display: none; /* Chrome/Safari */
-}
+
 
 
 /* dark mode */
